# devicemanager

./: .editorconfig  .gitignore  README.md
DeviceManager/: .clang-format  CMakeLists.txt  CMakePresets.json  device_manager.py
DeviceManager/DeviceManager/: CMakeLists.txt
DeviceManager/DeviceManager/src/: DeviceManager.cpp
DeviceManager/DeviceManagerLib/: CMakeLists.txt
DeviceManager/DeviceManagerLib/include/: AnalogDevice.h  AnalogDeviceFactory.h  Constants.h  DefaultDevicePresenter.h  Device.h  DigitalDevice.h  DigitalDeviceFactory.h  DigitalDeviceVariantA.h  DigitalDeviceVariantC.h  DigitalSequentialIDGenerator.h  Globals.h  IDevice.h  IDeviceFactory.h  IDevicePresenter.h  IIDGenerator.h  IRandomizer.h  IStatusStrategy.h  SequentialIDGenerator.h  StrategyGen1.h  StrategyGen2.h
DeviceManager/DeviceManagerLib/src/: AnalogDevice.cpp  AnalogDevice.h  AnalogDeviceFactory.cpp  AnalogDeviceFactory.h  AnalogSequentialIDGenerator.cpp  AnalogSequentialIDGenerator.h  Constants.h  DefaultDevicePresenter.cpp  DefaultDevicePresenter.h  Device.cpp  DigitalDevice.cpp  DigitalDevice.h  DigitalDeviceFactory.cpp  DigitalDeviceFactory.h  DigitalDeviceVariantA.cpp  DigitalDeviceVariantA.h  DigitalDeviceVariantB.cpp  DigitalDeviceVariantB.h  DigitalDeviceVariantC.cpp  DigitalDeviceVariantC.h  DigitalSequentialDGenerator.cpp  DigitalSequentialDGenerator.h  Globals.cpp  Globals.h  IDevice.h  IDeviceFactory.cpp  IDeviceFactory.h  IDevicePresenter.h  IIDGenerator.h  IStatusStrategy.h  SequentialIDGenerator.cpp  SequentialIDGenerator.h  StandardAnalogSequentialIDGenerator.cpp  StandardDigitalSequentialIDGenerator.cpp  StandardDigitalSequentialIDGenerator.h  StandardRandomizer.cpp  StandardRandomizer.h  StatusStrategy.cpp  StrategyGen1.cpp  StrategyGen1.h  (+2 more)
DeviceManager/DeviceManagerTests/: CMakeLists.txt
DeviceManager/DeviceManagerTests/src/: Fakes.cpp  Tests.cpp
